--- a/index.html
+++ b/index.html
@@ -7,9 +7,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="ondebox">
+        <svg class="onde" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+             viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+          <defs>
+            <path id="onda" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352Z" />
+          </defs>
+          <g class="parallaxonde">
+            <use xlink:href="#onda" x="48" y="0" fill="rgba(255, 237, 203, 0.6)" />
+            <use xlink:href="#onda" x="48" y="3" fill="rgba(255, 215, 203, 0.6)" />
+            <use xlink:href="#onda" x="48" y="5" fill="rgba(255, 204, 153, 0.6)" />
+            <use xlink:href="#onda" x="48" y="7" fill="white" />
+          </g>
+        </svg>
+      </div>
+
+
+
+
     <div class="wholeContainer">
     <div class="outerContainer">
-        <div class="columnColumn"></div>
+        <div class="columnColumn">
+            <div class="columnCard activeCard" id="dateCard">📅</div>
+            <div class="columnCard"  id="foodCard">🍽️</div>
+            <div class="columnCard" id="giftCard">🎁</div>
+            <div class="columnCard" id="micCard">🎤</div>
+        </div>
     <div class="innerContainer dateContainer">
 
         <p class="titleFont" id="firstText">23.05.2026</p>
@@ -19,12 +43,6 @@
             <div class="respondButton confirmButton" id="confirmButton">Godta</div>
             <div class="respondButton declineButton" id="declineButton">Avslå</div>
         </div>
-    </div>
-    <div class="columnColumn">
-        <div class="columnCard activeCard" id="dateCard">📅</div>
-        <div class="columnCard"  id="foodCard">🍽️</div>
-        <div class="columnCard" id="giftCard">🎁</div>
-        <div class="columnCard" id="micCard">🎤</div>
     </div>
 </div>
 <div class="toggleContainer">
