--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <p class="titleFont" id="firstText">23.05.2026</p>
         <p class="subTitleFont" id="secondText">16:00</p>
-        <p class="subFont" id="thirdText">Frogner<br>Hovedgaard</p>
+        <p class="subFont" id="thirdText">Frogner<br>Hovedgård</p>
         <div class="respondContainer">
             <div class="respondButton confirmButton" id="confirmButton">Godta</div>
             <div class="respondButton declineButton" id="declineButton">Avslå</div>
