--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <p class="subTitleFont" id="secondText">16:00</p>
         <p class="subFont" id="thirdText">Frogner<br>Hovedgård</p>
         <div class="respondContainer">
+            <div class="behindText" id="behindText">Knappene, slik som giftemål, er hovedsakelig symbolske.<br>Send helst en bekreftelse til bjoerne.larsen@gmail.com.</div>
             <div class="respondButton confirmButton" id="confirmButton">Godta</div>
             <div class="respondButton declineButton" id="declineButton">Avslå</div>
         </div>
