--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div class="columnCard"  id="foodCard">🍽️</div>
             <div class="columnCard" id="giftCard">🎁</div>
             <div class="columnCard" id="micCard">🎤</div>
+            <div class="columnCard" id="suitCard">👔</div>
         </div>
     <div class="innerContainer dateContainer">
 
